parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> assert expression
Rule 2     expression -> NAME
Rule 3     letexpression -> let NAME ASS expression
Rule 4     letexpression -> letexpression COMMA NAME ASS expression
Rule 5     expression -> letexpression in expression
Rule 6     expression -> expression EQ expression
Rule 7     expression -> ( expression )
Rule 8     expression -> NUMBER
Rule 9     expression -> HEX
Rule 10    expression -> BIN
Rule 11    expression -> expression [ expression COLON expression ]
Rule 12    expression -> expression with [ expression ] COLONEQ expression
Rule 13    expression -> expression [ expression ]
Rule 14    expression -> not expression
Rule 15    expression -> expression AND expression
Rule 16    expression -> expression OR expression
Rule 17    expression -> expression CONCAT expression
Rule 18    expression -> bvlt ( expression COMMA expression )
Rule 19    expression -> bvle ( expression COMMA expression )
Rule 20    expression -> bvgt ( expression COMMA expression )
Rule 21    expression -> bvge ( expression COMMA expression )
Rule 22    expression -> sbvlt ( expression COMMA expression )
Rule 23    expression -> sbvle ( expression COMMA expression )
Rule 24    expression -> sbvgt ( expression COMMA expression )
Rule 25    expression -> sbvge ( expression COMMA expression )
Rule 26    expression -> bvsx ( expression COMMA expression )
Rule 27    expression -> bvplus ( expression COMMA expression COMMA expression )
Rule 28    expression -> bvsub ( expression COMMA expression COMMA expression )
Rule 29    expression -> if expression then expression else expression endif

Terminals, with rules where they appear

(                    : 7 18 19 20 21 22 23 24 25 26 27 28
)                    : 7 18 19 20 21 22 23 24 25 26 27 28
AND                  : 15
ASS                  : 3 4
BIN                  : 10
COLON                : 11
COLONEQ              : 12
COMMA                : 4 18 19 20 21 22 23 24 25 26 27 27 28 28
CONCAT               : 17
EQ                   : 6
HEX                  : 9
NAME                 : 2 3 4
NUMBER               : 8
OR                   : 16
[                    : 11 12 13
]                    : 11 12 13
assert               : 1
bvge                 : 21
bvgt                 : 20
bvle                 : 19
bvlt                 : 18
bvplus               : 27
bvsub                : 28
bvsx                 : 26
else                 : 29
endif                : 29
error                : 
if                   : 29
in                   : 5
let                  : 3
not                  : 14
sbvge                : 25
sbvgt                : 24
sbvle                : 23
sbvlt                : 22
then                 : 29
with                 : 12

Nonterminals, with rules where they appear

expression           : 1 3 4 5 6 6 7 11 11 11 12 12 12 13 13 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 27 28 28 28 29 29 29
letexpression        : 4 5
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . assert expression

    assert          shift and go to state 1

    statement                      shift and go to state 2

state 1

    (1) statement -> assert . expression
    (2) expression -> . NAME
    (5) expression -> . letexpression in expression
    (6) expression -> . expression EQ expression
    (7) expression -> . ( expression )
    (8) expression -> . NUMBER
    (9) expression -> . HEX
    (10) expression -> . BIN
    (11) expression -> . expression [ expression COLON expression ]
    (12) expression -> . expression with [ expression ] COLONEQ expression
    (13) expression -> . expression [ expression ]
    (14) expression -> . not expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression CONCAT expression
    (18) expression -> . bvlt ( expression COMMA expression )
    (19) expression -> . bvle ( expression COMMA expression )
    (20) expression -> . bvgt ( expression COMMA expression )
    (21) expression -> . bvge ( expression COMMA expression )
    (22) expression -> . sbvlt ( expression COMMA expression )
    (23) expression -> . sbvle ( expression COMMA expression )
    (24) expression -> . sbvgt ( expression COMMA expression )
    (25) expression -> . sbvge ( expression COMMA expression )
    (26) expression -> . bvsx ( expression COMMA expression )
    (27) expression -> . bvplus ( expression COMMA expression COMMA expression )
    (28) expression -> . bvsub ( expression COMMA expression COMMA expression )
    (29) expression -> . if expression then expression else expression endif
    (3) letexpression -> . let NAME ASS expression
    (4) letexpression -> . letexpression COMMA NAME ASS expression

    NAME            shift and go to state 20
    (               shift and go to state 10
    NUMBER          shift and go to state 3
    HEX             shift and go to state 15
    BIN             shift and go to state 6
    not             shift and go to state 18
    bvlt            shift and go to state 7
    bvle            shift and go to state 11
    bvgt            shift and go to state 21
    bvge            shift and go to state 19
    sbvlt           shift and go to state 4
    sbvle           shift and go to state 14
    sbvgt           shift and go to state 9
    sbvge           shift and go to state 12
    bvsx            shift and go to state 13
    bvplus          shift and go to state 8
    bvsub           shift and go to state 16
    if              shift and go to state 5
    let             shift and go to state 17

    letexpression                  shift and go to state 22
    expression                     shift and go to state 23

state 2

    (0) S' -> statement .



state 3

    (8) expression -> NUMBER .

    COMMA           reduce using rule 8 (expression -> NUMBER .)
    EQ              reduce using rule 8 (expression -> NUMBER .)
    [               reduce using rule 8 (expression -> NUMBER .)
    with            reduce using rule 8 (expression -> NUMBER .)
    AND             reduce using rule 8 (expression -> NUMBER .)
    OR              reduce using rule 8 (expression -> NUMBER .)
    CONCAT          reduce using rule 8 (expression -> NUMBER .)
    )               reduce using rule 8 (expression -> NUMBER .)
    endif           reduce using rule 8 (expression -> NUMBER .)
    in              reduce using rule 8 (expression -> NUMBER .)
    else            reduce using rule 8 (expression -> NUMBER .)
    $end            reduce using rule 8 (expression -> NUMBER .)
    then            reduce using rule 8 (expression -> NUMBER .)
    COLON           reduce using rule 8 (expression -> NUMBER .)
    ]               reduce using rule 8 (expression -> NUMBER .)


state 4

    (22) expression -> sbvlt . ( expression COMMA expression )

    (               shift and go to state 24


state 5

    (29) expression -> if . expression then expression else expression endif
    (2) expression -> . NAME
    (5) expression -> . letexpression in expression
    (6) expression -> . expression EQ expression
    (7) expression -> . ( expression )
    (8) expression -> . NUMBER
    (9) expression -> . HEX
    (10) expression -> . BIN
    (11) expression -> . expression [ expression COLON expression ]
    (12) expression -> . expression with [ expression ] COLONEQ expression
    (13) expression -> . expression [ expression ]
    (14) expression -> . not expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression CONCAT expression
    (18) expression -> . bvlt ( expression COMMA expression )
    (19) expression -> . bvle ( expression COMMA expression )
    (20) expression -> . bvgt ( expression COMMA expression )
    (21) expression -> . bvge ( expression COMMA expression )
    (22) expression -> . sbvlt ( expression COMMA expression )
    (23) expression -> . sbvle ( expression COMMA expression )
    (24) expression -> . sbvgt ( expression COMMA expression )
    (25) expression -> . sbvge ( expression COMMA expression )
    (26) expression -> . bvsx ( expression COMMA expression )
    (27) expression -> . bvplus ( expression COMMA expression COMMA expression )
    (28) expression -> . bvsub ( expression COMMA expression COMMA expression )
    (29) expression -> . if expression then expression else expression endif
    (3) letexpression -> . let NAME ASS expression
    (4) letexpression -> . letexpression COMMA NAME ASS expression

    NAME            shift and go to state 20
    (               shift and go to state 10
    NUMBER          shift and go to state 3
    HEX             shift and go to state 15
    BIN             shift and go to state 6
    not             shift and go to state 18
    bvlt            shift and go to state 7
    bvle            shift and go to state 11
    bvgt            shift and go to state 21
    bvge            shift and go to state 19
    sbvlt           shift and go to state 4
    sbvle           shift and go to state 14
    sbvgt           shift and go to state 9
    sbvge           shift and go to state 12
    bvsx            shift and go to state 13
    bvplus          shift and go to state 8
    bvsub           shift and go to state 16
    if              shift and go to state 5
    let             shift and go to state 17

    letexpression                  shift and go to state 22
    expression                     shift and go to state 25

state 6

    (10) expression -> BIN .

    COMMA           reduce using rule 10 (expression -> BIN .)
    EQ              reduce using rule 10 (expression -> BIN .)
    [               reduce using rule 10 (expression -> BIN .)
    with            reduce using rule 10 (expression -> BIN .)
    AND             reduce using rule 10 (expression -> BIN .)
    OR              reduce using rule 10 (expression -> BIN .)
    CONCAT          reduce using rule 10 (expression -> BIN .)
    )               reduce using rule 10 (expression -> BIN .)
    endif           reduce using rule 10 (expression -> BIN .)
    in              reduce using rule 10 (expression -> BIN .)
    else            reduce using rule 10 (expression -> BIN .)
    $end            reduce using rule 10 (expression -> BIN .)
    then            reduce using rule 10 (expression -> BIN .)
    COLON           reduce using rule 10 (expression -> BIN .)
    ]               reduce using rule 10 (expression -> BIN .)


state 7

    (18) expression -> bvlt . ( expression COMMA expression )

    (               shift and go to state 26


state 8

    (27) expression -> bvplus . ( expression COMMA expression COMMA expression )

    (               shift and go to state 27


state 9

    (24) expression -> sbvgt . ( expression COMMA expression )

    (               shift and go to state 28


state 10

    (7) expression -> ( . expression )
    (2) expression -> . NAME
    (5) expression -> . letexpression in expression
    (6) expression -> . expression EQ expression
    (7) expression -> . ( expression )
    (8) expression -> . NUMBER
    (9) expression -> . HEX
    (10) expression -> . BIN
    (11) expression -> . expression [ expression COLON expression ]
    (12) expression -> . expression with [ expression ] COLONEQ expression
    (13) expression -> . expression [ expression ]
    (14) expression -> . not expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression CONCAT expression
    (18) expression -> . bvlt ( expression COMMA expression )
    (19) expression -> . bvle ( expression COMMA expression )
    (20) expression -> . bvgt ( expression COMMA expression )
    (21) expression -> . bvge ( expression COMMA expression )
    (22) expression -> . sbvlt ( expression COMMA expression )
    (23) expression -> . sbvle ( expression COMMA expression )
    (24) expression -> . sbvgt ( expression COMMA expression )
    (25) expression -> . sbvge ( expression COMMA expression )
    (26) expression -> . bvsx ( expression COMMA expression )
    (27) expression -> . bvplus ( expression COMMA expression COMMA expression )
    (28) expression -> . bvsub ( expression COMMA expression COMMA expression )
    (29) expression -> . if expression then expression else expression endif
    (3) letexpression -> . let NAME ASS expression
    (4) letexpression -> . letexpression COMMA NAME ASS expression

    NAME            shift and go to state 20
    (               shift and go to state 10
    NUMBER          shift and go to state 3
    HEX             shift and go to state 15
    BIN             shift and go to state 6
    not             shift and go to state 18
    bvlt            shift and go to state 7
    bvle            shift and go to state 11
    bvgt            shift and go to state 21
    bvge            shift and go to state 19
    sbvlt           shift and go to state 4
    sbvle           shift and go to state 14
    sbvgt           shift and go to state 9
    sbvge           shift and go to state 12
    bvsx            shift and go to state 13
    bvplus          shift and go to state 8
    bvsub           shift and go to state 16
    if              shift and go to state 5
    let             shift and go to state 17

    letexpression                  shift and go to state 22
    expression                     shift and go to state 29

state 11

    (19) expression -> bvle . ( expression COMMA expression )

    (               shift and go to state 30


state 12

    (25) expression -> sbvge . ( expression COMMA expression )

    (               shift and go to state 31


state 13

    (26) expression -> bvsx . ( expression COMMA expression )

    (               shift and go to state 32


state 14

    (23) expression -> sbvle . ( expression COMMA expression )

    (               shift and go to state 33


state 15

    (9) expression -> HEX .

    COMMA           reduce using rule 9 (expression -> HEX .)
    EQ              reduce using rule 9 (expression -> HEX .)
    [               reduce using rule 9 (expression -> HEX .)
    with            reduce using rule 9 (expression -> HEX .)
    AND             reduce using rule 9 (expression -> HEX .)
    OR              reduce using rule 9 (expression -> HEX .)
    CONCAT          reduce using rule 9 (expression -> HEX .)
    )               reduce using rule 9 (expression -> HEX .)
    endif           reduce using rule 9 (expression -> HEX .)
    in              reduce using rule 9 (expression -> HEX .)
    else            reduce using rule 9 (expression -> HEX .)
    $end            reduce using rule 9 (expression -> HEX .)
    then            reduce using rule 9 (expression -> HEX .)
    COLON           reduce using rule 9 (expression -> HEX .)
    ]               reduce using rule 9 (expression -> HEX .)


state 16

    (28) expression -> bvsub . ( expression COMMA expression COMMA expression )

    (               shift and go to state 34


state 17

    (3) letexpression -> let . NAME ASS expression

    NAME            shift and go to state 35


state 18

    (14) expression -> not . expression
    (2) expression -> . NAME
    (5) expression -> . letexpression in expression
    (6) expression -> . expression EQ expression
    (7) expression -> . ( expression )
    (8) expression -> . NUMBER
    (9) expression -> . HEX
    (10) expression -> . BIN
    (11) expression -> . expression [ expression COLON expression ]
    (12) expression -> . expression with [ expression ] COLONEQ expression
    (13) expression -> . expression [ expression ]
    (14) expression -> . not expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression CONCAT expression
    (18) expression -> . bvlt ( expression COMMA expression )
    (19) expression -> . bvle ( expression COMMA expression )
    (20) expression -> . bvgt ( expression COMMA expression )
    (21) expression -> . bvge ( expression COMMA expression )
    (22) expression -> . sbvlt ( expression COMMA expression )
    (23) expression -> . sbvle ( expression COMMA expression )
    (24) expression -> . sbvgt ( expression COMMA expression )
    (25) expression -> . sbvge ( expression COMMA expression )
    (26) expression -> . bvsx ( expression COMMA expression )
    (27) expression -> . bvplus ( expression COMMA expression COMMA expression )
    (28) expression -> . bvsub ( expression COMMA expression COMMA expression )
    (29) expression -> . if expression then expression else expression endif
    (3) letexpression -> . let NAME ASS expression
    (4) letexpression -> . letexpression COMMA NAME ASS expression

    NAME            shift and go to state 20
    (               shift and go to state 10
    NUMBER          shift and go to state 3
    HEX             shift and go to state 15
    BIN             shift and go to state 6
    not             shift and go to state 18
    bvlt            shift and go to state 7
    bvle            shift and go to state 11
    bvgt            shift and go to state 21
    bvge            shift and go to state 19
    sbvlt           shift and go to state 4
    sbvle           shift and go to state 14
    sbvgt           shift and go to state 9
    sbvge           shift and go to state 12
    bvsx            shift and go to state 13
    bvplus          shift and go to state 8
    bvsub           shift and go to state 16
    if              shift and go to state 5
    let             shift and go to state 17

    letexpression                  shift and go to state 22
    expression                     shift and go to state 36

state 19

    (21) expression -> bvge . ( expression COMMA expression )

    (               shift and go to state 37


state 20

    (2) expression -> NAME .

    COMMA           reduce using rule 2 (expression -> NAME .)
    EQ              reduce using rule 2 (expression -> NAME .)
    [               reduce using rule 2 (expression -> NAME .)
    with            reduce using rule 2 (expression -> NAME .)
    AND             reduce using rule 2 (expression -> NAME .)
    OR              reduce using rule 2 (expression -> NAME .)
    CONCAT          reduce using rule 2 (expression -> NAME .)
    )               reduce using rule 2 (expression -> NAME .)
    endif           reduce using rule 2 (expression -> NAME .)
    in              reduce using rule 2 (expression -> NAME .)
    else            reduce using rule 2 (expression -> NAME .)
    $end            reduce using rule 2 (expression -> NAME .)
    then            reduce using rule 2 (expression -> NAME .)
    COLON           reduce using rule 2 (expression -> NAME .)
    ]               reduce using rule 2 (expression -> NAME .)


state 21

    (20) expression -> bvgt . ( expression COMMA expression )

    (               shift and go to state 38


state 22

    (5) expression -> letexpression . in expression
    (4) letexpression -> letexpression . COMMA NAME ASS expression

    in              shift and go to state 40
    COMMA           shift and go to state 39


state 23

    (1) statement -> assert expression .
    (6) expression -> expression . EQ expression
    (11) expression -> expression . [ expression COLON expression ]
    (12) expression -> expression . with [ expression ] COLONEQ expression
    (13) expression -> expression . [ expression ]
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression
    (17) expression -> expression . CONCAT expression

    $end            reduce using rule 1 (statement -> assert expression .)
    EQ              shift and go to state 44
    [               shift and go to state 43
    with            shift and go to state 42
    AND             shift and go to state 41
    OR              shift and go to state 45
    CONCAT          shift and go to state 46


state 24

    (22) expression -> sbvlt ( . expression COMMA expression )
    (2) expression -> . NAME
    (5) expression -> . letexpression in expression
    (6) expression -> . expression EQ expression
    (7) expression -> . ( expression )
    (8) expression -> . NUMBER
    (9) expression -> . HEX
    (10) expression -> . BIN
    (11) expression -> . expression [ expression COLON expression ]
    (12) expression -> . expression with [ expression ] COLONEQ expression
    (13) expression -> . expression [ expression ]
    (14) expression -> . not expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression CONCAT expression
    (18) expression -> . bvlt ( expression COMMA expression )
    (19) expression -> . bvle ( expression COMMA expression )
    (20) expression -> . bvgt ( expression COMMA expression )
    (21) expression -> . bvge ( expression COMMA expression )
    (22) expression -> . sbvlt ( expression COMMA expression )
    (23) expression -> . sbvle ( expression COMMA expression )
    (24) expression -> . sbvgt ( expression COMMA expression )
    (25) expression -> . sbvge ( expression COMMA expression )
    (26) expression -> . bvsx ( expression COMMA expression )
    (27) expression -> . bvplus ( expression COMMA expression COMMA expression )
    (28) expression -> . bvsub ( expression COMMA expression COMMA expression )
    (29) expression -> . if expression then expression else expression endif
    (3) letexpression -> . let NAME ASS expression
    (4) letexpression -> . letexpression COMMA NAME ASS expression

    NAME            shift and go to state 20
    (               shift and go to state 10
    NUMBER          shift and go to state 3
    HEX             shift and go to state 15
    BIN             shift and go to state 6
    not             shift and go to state 18
    bvlt            shift and go to state 7
    bvle            shift and go to state 11
    bvgt            shift and go to state 21
    bvge            shift and go to state 19
    sbvlt           shift and go to state 4
    sbvle           shift and go to state 14
    sbvgt           shift and go to state 9
    sbvge           shift and go to state 12
    bvsx            shift and go to state 13
    bvplus          shift and go to state 8
    bvsub           shift and go to state 16
    if              shift and go to state 5
    let             shift and go to state 17

    letexpression                  shift and go to state 22
    expression                     shift and go to state 47

state 25

    (29) expression -> if expression . then expression else expression endif
    (6) expression -> expression . EQ expression
    (11) expression -> expression . [ expression COLON expression ]
    (12) expression -> expression . with [ expression ] COLONEQ expression
    (13) expression -> expression . [ expression ]
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression
    (17) expression -> expression . CONCAT expression

    then            shift and go to state 48
    EQ              shift and go to state 44
    [               shift and go to state 43
    with            shift and go to state 42
    AND             shift and go to state 41
    OR              shift and go to state 45
    CONCAT          shift and go to state 46


state 26

    (18) expression -> bvlt ( . expression COMMA expression )
    (2) expression -> . NAME
    (5) expression -> . letexpression in expression
    (6) expression -> . expression EQ expression
    (7) expression -> . ( expression )
    (8) expression -> . NUMBER
    (9) expression -> . HEX
    (10) expression -> . BIN
    (11) expression -> . expression [ expression COLON expression ]
    (12) expression -> . expression with [ expression ] COLONEQ expression
    (13) expression -> . expression [ expression ]
    (14) expression -> . not expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression CONCAT expression
    (18) expression -> . bvlt ( expression COMMA expression )
    (19) expression -> . bvle ( expression COMMA expression )
    (20) expression -> . bvgt ( expression COMMA expression )
    (21) expression -> . bvge ( expression COMMA expression )
    (22) expression -> . sbvlt ( expression COMMA expression )
    (23) expression -> . sbvle ( expression COMMA expression )
    (24) expression -> . sbvgt ( expression COMMA expression )
    (25) expression -> . sbvge ( expression COMMA expression )
    (26) expression -> . bvsx ( expression COMMA expression )
    (27) expression -> . bvplus ( expression COMMA expression COMMA expression )
    (28) expression -> . bvsub ( expression COMMA expression COMMA expression )
    (29) expression -> . if expression then expression else expression endif
    (3) letexpression -> . let NAME ASS expression
    (4) letexpression -> . letexpression COMMA NAME ASS expression

    NAME            shift and go to state 20
    (               shift and go to state 10
    NUMBER          shift and go to state 3
    HEX             shift and go to state 15
    BIN             shift and go to state 6
    not             shift and go to state 18
    bvlt            shift and go to state 7
    bvle            shift and go to state 11
    bvgt            shift and go to state 21
    bvge            shift and go to state 19
    sbvlt           shift and go to state 4
    sbvle           shift and go to state 14
    sbvgt           shift and go to state 9
    sbvge           shift and go to state 12
    bvsx            shift and go to state 13
    bvplus          shift and go to state 8
    bvsub           shift and go to state 16
    if              shift and go to state 5
    let             shift and go to state 17

    letexpression                  shift and go to state 22
    expression                     shift and go to state 49

state 27
